--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -126,3 +126,31 @@
     transform: rotate(360deg);
   }
 }
+
+.link:link,
+.link:visited {
+  color: $color-gray-dark-2;
+}
+
+.message {
+  max-width: 70rem;
+  margin: 0 auto;
+  padding: 5em 3em;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  svg {
+    height: 3rem;
+    width: 3rem;
+    fill: $color-primary;
+  }
+
+  p {
+    margin-left: 1em;
+    font-size: 1.8rem;
+    line-height: 1.5;
+    font-weight: 600;
+  }
+}
