--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -28,6 +28,8 @@ html {
 
 body {
   font-family: "Open Sans", sans-serif;
+  font-weight: 400;
+  line-height: 1.6;
   background-image: $gradient;
   background-size: cover;
   color: $color-gray-dark-1;
