style: minor changes in some margins and paddings

--- a/src/sass/_preview.scss
+++ b/src/sass/_preview.scss
@@ -4,7 +4,7 @@
     &:visited {
       display: flex;
       align-items: center;
-      padding: 1.5rem 3.25rem;
+      padding: 1.4em 3.5em;
       transition: all 0.3s;
       border-right: 1px solid #fff;
       text-decoration: none;
@@ -25,7 +25,7 @@
     border-radius: 50%;
     overflow: hidden;
     height: 5.8rem;
-    margin-right: 2rem;
+    margin-right: 1.75em;
     position: relative;
     backface-visibility: hidden;
 
