--- a/src/sass/_recipe.scss
+++ b/src/sass/_recipe.scss
@@ -162,7 +162,7 @@
     font-size: 1.7rem;
     line-height: 1.6;
     text-align: center;
-    margin-bottom: 3.5rem;
+    margin-bottom: 1.25em;
     color: $color-gray-dark-2;
   }
 
