--- a/src/sass/_searchResults.scss
+++ b/src/sass/_searchResults.scss
@@ -11,7 +11,22 @@
 
 .pagination {
   margin-top: 1.25em;
+  margin-bottom: 2.5em;
   padding: 0 3em;
+  position: relative;
+
+  &-info {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: $color-gray-light-2;
+    color: $color-primary;
+    font-size: 1.3rem;
+    font-weight: 600;
+    padding: 0.6em 1em;
+    border-radius: 10rem;
+  }
 
   &::after {
     content: "";
