--- a/src/sass/_preview.scss
+++ b/src/sass/_preview.scss
@@ -8,6 +8,10 @@
       transition: all 0.3s;
       border-right: 1px solid #fff;
       text-decoration: none;
+
+      @media only screen and (max-width: $breakpoint-sm) {
+        padding: 1.4em 2em;
+      }
     }
 
     &:hover {
@@ -28,6 +32,11 @@
     margin-right: 1.75em;
     position: relative;
     backface-visibility: hidden;
+
+    @media only screen and (max-width: $breakpoint-sm) {
+      flex: 0 0 5rem;
+      height: 5rem;
+    }
 
     &::before {
       content: "";
