--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -5,6 +5,10 @@
   text-transform: uppercase;
   margin-bottom: 1.25em;
   text-align: center;
+
+  @media only screen and (max-width: $breakpoint-sm) {
+    margin-bottom: 0.75em;
+  }
 }
 
 .btn {
@@ -136,6 +140,11 @@
     height: 2.5rem;
     width: 2.5rem;
     fill: #fff;
+
+    @media only screen and (max-width: $breakpoint-sm) {
+      height: 2rem;
+      width: 2rem;
+    }
   }
 }
 
