--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -6,6 +6,13 @@
   background-color: $color-gray-light-1;
   padding: 0 2em;
 
+  @media only screen and (max-width: $breakpoint-sm) {
+    flex-direction: column;
+    align-items: center;
+    padding: 2.5em;
+    gap: 2em;
+  }
+
   &__logo {
     height: 8rem;
     display: block;
@@ -19,6 +26,27 @@
   border-radius: 10rem;
   transition: all 0.3s;
 
+  @media only screen and (max-width: $breakpoint-sm) {
+    order: 1;
+    width: 100%;
+  }
+
+  @media only screen and (max-width: $breakpoint-xsm) {
+    position: relative;
+    z-index: -1;
+    height: 0;
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+
+  &--show {
+    position: relative;
+    z-index: 10;
+    height: auto;
+    opacity: 1;
+    transform: translateX(0);
+  }
+
   &:focus-within {
     transform: translateY(-2px);
     box-shadow: 0 0.7rem 3rem rgba($color-gray-dark-1, 0.08);
@@ -30,6 +58,10 @@
     padding-left: 2em;
     width: 30rem;
     font-family: inherit;
+
+    @media only screen and (max-width: $breakpoint-sm) {
+      width: 100%;
+    }
 
     &:focus {
       outline: none;
@@ -51,6 +83,12 @@
     border-radius: 10rem;
     background: $gradient;
     color: #fff;
+
+    span {
+      @media only screen and (max-width: $breakpoint-xsm) {
+        display: none;
+      }
+    }
   }
 }
 
@@ -62,6 +100,10 @@
     display: flex;
     height: 100%;
     list-style: none;
+
+    @media only screen and (max-width: $breakpoint-sm) {
+      justify-content: center;
+    }
   }
 
   &__item {
@@ -93,10 +135,21 @@
     span {
       position: relative;
       // top: 1px;
+      @media only screen and (max-width: $breakpoint-xsm) {
+        display: none;
+      }
     }
 
     &:hover {
       background: $color-gray-light-2;
+    }
+
+    &--show-sidebar {
+      display: none;
+
+      @media only screen and (max-width: $breakpoint-xsm) {
+        display: flex;
+      }
     }
   }
 }
@@ -113,6 +166,12 @@
   visibility: hidden;
   opacity: 0;
   transition: all 0.5s 0.2s;
+
+  @media only screen and (max-width: $breakpoint-sm) {
+    max-width: 40rem;
+    transform: translate(50%, 10%);
+    right: 50%;
+  }
 
   &__list {
     list-style: none;
