--- a/src/sass/_recipe.scss
+++ b/src/sass/_recipe.scss
@@ -1,5 +1,10 @@
 .recipe {
   background-color: $color-gray-light-1;
+  grid-area: recipe;
+
+  @media only screen and (max-width: $breakpoint-xsm) {
+    grid-column: 1 / 3;
+  }
 
   ////////////
   // FIGURE //
@@ -41,6 +46,12 @@
     line-height: 1.85;
     text-align: center;
 
+    @media only screen and (max-width: $breakpoint-sm) {
+      font-size: 2rem;
+      bottom: 50%;
+      transform: translate(-50%, 50%) skewY(-6deg);
+    }
+
     span {
       -webkit-box-decoration-break: clone;
       box-decoration-break: clone;
@@ -57,6 +68,13 @@
     display: flex;
     align-items: center;
     padding: 6em;
+
+    @media only screen and (max-width: $breakpoint-sm) {
+      flex-direction: column;
+      align-items: flex-start;
+      padding: 3em;
+      gap: 0.75em;
+    }
   }
 
   &__info {
@@ -106,6 +124,23 @@
       height: 2.5rem;
       width: 2.5rem;
       fill: $color-primary;
+
+      @media only screen and (max-width: $breakpoint-sm) {
+        height: 2rem;
+        width: 2rem;
+      }
+    }
+
+    @media only screen and (max-width: $breakpoint-sm) {
+      position: absolute;
+      right: 7em;
+    }
+  }
+
+  .btn--bookmark {
+    @media only screen and (max-width: $breakpoint-sm) {
+      position: absolute;
+      right: 2em;
     }
   }
 
@@ -120,6 +155,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    @media only screen and (max-width: $breakpoint-sm) {
+      padding: 2em;
+      align-items: flex-start;
+    }
   }
 
   &__ingredient-list {
@@ -127,6 +167,10 @@
     grid-template-columns: 1fr 1fr;
     gap: 1em;
     list-style: none;
+
+    @media only screen and (max-width: $breakpoint-sm) {
+      grid-template-columns: 1fr;
+    }
   }
 
   &__ingredient {
@@ -156,6 +200,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    @media only screen and (max-width: $breakpoint-sm) {
+      padding: 3em;
+      align-items: flex-start;
+    }
   }
 
   &__directions-text {
@@ -164,6 +213,10 @@
     text-align: center;
     margin-bottom: 1.25em;
     color: $color-gray-dark-2;
+
+    @media only screen and (max-width: $breakpoint-sm) {
+      text-align: start;
+    }
   }
 
   &__publisher {
